[package]
name = "libmqm-sys"
version = "0.4.1"
description = "IBM® MQ Interface (MQI) and MQ Administration Interface (MQAI) bindings"
authors = [ "Warren Spits <warren@advantic.au>" ]
repository = "https://github.com/advantic-au/libmqm-sys"
license = "Apache-2.0"
readme = "README.md"
keywords = [ "message-queue", "messaging" ]
categories = [ "external-ffi-bindings", "asynchronous" ]

edition = "2021"
rust-version = "1.77" # Note: Also change the github workflow "minimum" action
links = "mqm"
build = "build/mod.rs"

[features]
default = ["link", "mqi_helpers", "bindgen", "mqc_9_2_0_0"]
docsrs = ["link_api", "pcf", "exits", "mqai", "dlopen2", "mqc_9_4_1_0"]
pregen = ["pcf", "exits", "mqai", "bindgen", "mqc_9_4_1_0"]

dlopen2 = ["dep:dlopen2", "dep:libc"]
link = [ "link_mqm", "link_api" ]
link_mqm = []
link_api = []
mqi_helpers = []
pcf = []
exits = []
mqai = []
bindgen = ["dep:bindgen" ]

mqc_9_2_0_0 = []
mqc_9_2_0_5 = ["mqc_9_2_0_0"]
mqc_9_2_0_6 = ["mqc_9_2_0_5"]
mqc_9_2_0_7 = ["mqc_9_2_0_6"]
mqc_9_2_0_10 = ["mqc_9_2_0_7"]
mqc_9_2_0_11 = ["mqc_9_2_0_10"]
mqc_9_2_0_15 = ["mqc_9_2_0_11"]
mqc_9_2_0_16 = ["mqc_9_2_0_15"]
mqc_9_2_0_20 = ["mqc_9_2_0_16"]
mqc_9_2_0_21 = ["mqc_9_2_0_20"]
mqc_9_2_0_22 = ["mqc_9_2_0_21"]
mqc_9_2_0_25 = ["mqc_9_2_0_22"]
mqc_9_2_0_26 = ["mqc_9_2_0_25"]
mqc_9_2_0_27 = ["mqc_9_2_0_26"]
mqc_9_3_0_0 = ["mqc_9_2_0_27"]
mqc_9_3_0_1 = ["mqc_9_3_0_0"]
mqc_9_3_0_2 = ["mqc_9_3_0_1"]
mqc_9_3_0_4 = ["mqc_9_3_0_2"]
mqc_9_3_0_5 = ["mqc_9_3_0_4"]
mqc_9_3_0_6 = ["mqc_9_3_0_5"]
mqc_9_3_0_10 = ["mqc_9_3_0_6"]
mqc_9_3_0_11 = ["mqc_9_3_0_10"]
mqc_9_3_0_15 = ["mqc_9_3_0_11"]
mqc_9_3_0_16 = ["mqc_9_3_0_15"]
mqc_9_3_0_17 = ["mqc_9_3_0_16"]
mqc_9_3_0_20 = ["mqc_9_3_0_17"]
mqc_9_3_0_21 = ["mqc_9_3_0_20"]
mqc_9_3_1_0 = ["mqc_9_3_0_21"]
mqc_9_3_2_0 = ["mqc_9_3_1_0"]
mqc_9_3_2_1 = ["mqc_9_3_2_0"]
mqc_9_3_3_0 = ["mqc_9_3_2_1"]
mqc_9_3_3_1 = ["mqc_9_3_3_0"]
mqc_9_3_4_0 = ["mqc_9_3_3_1"] # Auth token support
mqc_9_3_4_1 = ["mqc_9_3_4_0"]
mqc_9_3_5_0 = ["mqc_9_3_4_1"]
mqc_9_3_5_1 = ["mqc_9_3_5_0"]
mqc_9_4_0_0 = ["mqc_9_3_5_1"]
mqc_9_4_0_5 = ["mqc_9_4_0_0"]
mqc_9_4_1_0 = ["mqc_9_4_0_5"]

[dependencies]
dlopen2 = { version = "0.7.0", optional = true }
libc = { version = "0.2.155", optional = true }

[build-dependencies]
regex-lite = "0.1.6"
bindgen = { version = "0.70.1", optional = true }
cc = "1.1.18"

[package.metadata.docs.rs]
features = ["docsrs"]
no-default-features = true
