[package]
name = "libmqm-sys"
version = "0.5.0"
description = "IBM® MQ Interface (MQI) and MQ Administration Interface (MQAI) bindings"
authors = [ "Warren Spits <warren@advantic.au>" ]
repository = "https://github.com/advantic-au/libmqm-sys"
license = "Apache-2.0"
readme = "README.md"
keywords = [ "message-queue", "messaging" ]
categories = [ "external-ffi-bindings", "asynchronous" ]

edition = "2021"
rust-version = "1.77" # Note: Also change the github workflow "minimum" action
links = "mqm"
build = "build/mod.rs"

[features]
default = ["link", "mqi_helpers", "bindgen", "mqc_9_2_0_0"]
docsrs = ["link_api", "pcf", "exits", "mqai", "dlopen2", "mqc_9_4_1_0"] # Features enabled for docsrs generation
pregen = ["pcf", "exits", "mqai", "bindgen", "mqc_9_4_1_0"] # Generate the bindings and save them in the src folder

dlopen2 = ["dep:dlopen2", "dep:libc"] # Enable runtime loading of the MQI library using `dlopen2`
link = [ "link_mqm", "link_api" ] # Link the MQI library at compile time
link_mqm = []
link_api = []
mqi_helpers = []
pcf = [] # Enable structures for PCF
exits = [] # Enable structures for exits
mqai = [] # Enable structures and constants for MQAI
bindgen = ["dep:bindgen" ] # Run bindgen at build time

mqc_9_2_0_0 = [] # Minimum MQ client version 9.2.0.0
mqc_9_2_0_5 = ["mqc_9_2_0_0"] # Minimum MQ client version 9.2.0.5
mqc_9_2_0_6 = ["mqc_9_2_0_5"] # Minimum MQ client version 9.2.0.6
mqc_9_2_0_7 = ["mqc_9_2_0_6"] # Minimum MQ client version 9.2.0.7
mqc_9_2_0_10 = ["mqc_9_2_0_7"] # Minimum MQ client version 9.2.0.10
mqc_9_2_0_11 = ["mqc_9_2_0_10"] # Minimum MQ client version 9.2.0.11
mqc_9_2_0_15 = ["mqc_9_2_0_11"] # Minimum MQ client version 9.2.0.15
mqc_9_2_0_16 = ["mqc_9_2_0_15"] # Minimum MQ client version 9.2.0.16
mqc_9_2_0_20 = ["mqc_9_2_0_16"] # Minimum MQ client version 9.2.0.20
mqc_9_2_0_21 = ["mqc_9_2_0_20"] # Minimum MQ client version 9.2.0.21
mqc_9_2_0_22 = ["mqc_9_2_0_21"] # Minimum MQ client version 9.2.0.22
mqc_9_2_0_25 = ["mqc_9_2_0_22"] # Minimum MQ client version 9.2.0.25
mqc_9_2_0_26 = ["mqc_9_2_0_25"] # Minimum MQ client version 9.2.0.26
mqc_9_2_0_27 = ["mqc_9_2_0_26"] # Minimum MQ client version 9.2.0.27
mqc_9_2_0_28 = ["mqc_9_2_0_27"] # Minimum MQ client version 9.2.0.28
mqc_9_3_0_0 = ["mqc_9_2_0_28"] # Minimum MQ client version 9.3.0.0
mqc_9_3_0_1 = ["mqc_9_3_0_0"] # Minimum MQ client version 9.3.0.1
mqc_9_3_0_2 = ["mqc_9_3_0_1"] # Minimum MQ client version 9.3.0.2
mqc_9_3_0_4 = ["mqc_9_3_0_2"] # Minimum MQ client version 9.3.0.4
mqc_9_3_0_5 = ["mqc_9_3_0_4"] # Minimum MQ client version 9.3.0.5
mqc_9_3_0_6 = ["mqc_9_3_0_5"] # Minimum MQ client version 9.3.0.6
mqc_9_3_0_10 = ["mqc_9_3_0_6"] # Minimum MQ client version 9.3.0.10
mqc_9_3_0_11 = ["mqc_9_3_0_10"] # Minimum MQ client version 9.3.0.11
mqc_9_3_0_15 = ["mqc_9_3_0_11"] # Minimum MQ client version 9.3.0.15
mqc_9_3_0_16 = ["mqc_9_3_0_15"] # Minimum MQ client version 9.3.0.16
mqc_9_3_0_17 = ["mqc_9_3_0_16"] # Minimum MQ client version 9.3.0.17
mqc_9_3_0_20 = ["mqc_9_3_0_17"] # Minimum MQ client version 9.3.0.20
mqc_9_3_0_21 = ["mqc_9_3_0_20"] # Minimum MQ client version 9.3.0.21
mqc_9_3_0_25 = ["mqc_9_3_0_21"] # Minimum MQ client version 9.3.0.25
mqc_9_3_1_0 = ["mqc_9_3_0_25"] # Minimum MQ client version 9.3.1.0
mqc_9_3_2_0 = ["mqc_9_3_1_0"] # Minimum MQ client version 9.3.2.0
mqc_9_3_2_1 = ["mqc_9_3_2_0"] # Minimum MQ client version 9.3.2.1
mqc_9_3_3_0 = ["mqc_9_3_2_1"] # Minimum MQ client version 9.3.3.0
mqc_9_3_3_1 = ["mqc_9_3_3_0"] # Minimum MQ client version 9.3.3.1
mqc_9_3_4_0 = ["mqc_9_3_3_1"] # Minimum MQ client version 9.3.4.0
mqc_9_3_4_1 = ["mqc_9_3_4_0"] # Minimum MQ client version 9.3.4.1
mqc_9_3_5_0 = ["mqc_9_3_4_1"] # Minimum MQ client version 9.3.5.0
mqc_9_3_5_1 = ["mqc_9_3_5_0"] # Minimum MQ client version 9.3.5.1
mqc_9_4_0_0 = ["mqc_9_3_5_1"] # Minimum MQ client version 9.4.0.0
mqc_9_4_0_5 = ["mqc_9_4_0_0"] # Minimum MQ client version 9.4.0.5
mqc_9_4_0_6 = ["mqc_9_4_0_5"] # Minimum MQ client version 9.4.0.6
mqc_9_4_1_0 = ["mqc_9_4_0_6"] # Minimum MQ client version 9.4.1.0

[dependencies]
dlopen2 = { version = "0.7.0", optional = true }
libc = { version = "0.2.155", optional = true }

[build-dependencies]
regex-lite = "0.1.6"
bindgen = { version = "0.70.1", optional = true }
cc = "1.1.18"

[package.metadata.docs.rs]
features = ["docsrs"]
no-default-features = true
