[package]
name = "libmqm-sys"
description = "IBM® MQ Interface (MQI) and MQ Administration Interface (MQAI) bindings"
keywords = ["message-queue", "messaging"]
categories = ["external-ffi-bindings", "asynchronous"]
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

links = "mqm"
build = "build/mod.rs"

[lints]
workspace = true

[features]
default = ["link", "mqi_helpers", "bindgen", "versiongen", "mqc_9_2_0_0"]

## Generate the bindings and save them in the src folder
pregen = ["pcf", "exits", "mqai", "bindgen", "versiongen", "mqc_9_4_1_0"]

## Enable runtime loading of the MQI library using [`dlopen2`](dlopen2)
dlopen2 = ["dep:dlopen2", "dep:libc"]

## [`Link`](link) the MQI library at compile time
link = ["link_mqm", "link_api"]
link_mqm = []
link_api = []

## Compile the string and stuct initialisers from the MQI C headers
mqi_helpers = []

## Enable structures for PCF
pcf = []

## Enable structures for exits
exits = []

## Enable structures and constants for MQAI
mqai = []

docsrs = ["link_api", "pcf", "exits", "mqai", "dlopen2", "mqc_9_4_1_0"]

## Use [`bindgen`](https://docs.rs/bindgen/latest/bindgen/) to generate bindings
bindgen = ["dep:bindgen", "versiongen"]

## Generate version file from MQC library
versiongen = [] 

## Minimum MQ client version 9.2.0.0
mqc_9_2_0_0 = []
mqc_9_2_0_5 = ["mqc_9_2_0_0"]   # Minimum MQ client version 9.2.0.5
mqc_9_2_0_6 = ["mqc_9_2_0_5"]   # Minimum MQ client version 9.2.0.6
mqc_9_2_0_7 = ["mqc_9_2_0_6"]   # Minimum MQ client version 9.2.0.7
mqc_9_2_0_10 = ["mqc_9_2_0_7"]  # Minimum MQ client version 9.2.0.10
mqc_9_2_0_11 = ["mqc_9_2_0_10"] # Minimum MQ client version 9.2.0.11
mqc_9_2_0_15 = ["mqc_9_2_0_11"] # Minimum MQ client version 9.2.0.15
mqc_9_2_0_16 = ["mqc_9_2_0_15"] # Minimum MQ client version 9.2.0.16
mqc_9_2_0_20 = ["mqc_9_2_0_16"] # Minimum MQ client version 9.2.0.20
mqc_9_2_0_21 = ["mqc_9_2_0_20"] # Minimum MQ client version 9.2.0.21
mqc_9_2_0_22 = ["mqc_9_2_0_21"] # Minimum MQ client version 9.2.0.22
mqc_9_2_0_25 = ["mqc_9_2_0_22"] # Minimum MQ client version 9.2.0.25
mqc_9_2_0_26 = ["mqc_9_2_0_25"] # Minimum MQ client version 9.2.0.26
mqc_9_2_0_27 = ["mqc_9_2_0_26"] # Minimum MQ client version 9.2.0.27
mqc_9_2_0_28 = ["mqc_9_2_0_27"] # Minimum MQ client version 9.2.0.28
mqc_9_3_0_0 = ["mqc_9_2_0_28"]  # Minimum MQ client version 9.3.0.0
mqc_9_3_0_1 = ["mqc_9_3_0_0"]   # Minimum MQ client version 9.3.0.1
mqc_9_3_0_2 = ["mqc_9_3_0_1"]   # Minimum MQ client version 9.3.0.2
mqc_9_3_0_4 = ["mqc_9_3_0_2"]   # Minimum MQ client version 9.3.0.4
mqc_9_3_0_5 = ["mqc_9_3_0_4"]   # Minimum MQ client version 9.3.0.5
mqc_9_3_0_6 = ["mqc_9_3_0_5"]   # Minimum MQ client version 9.3.0.6
mqc_9_3_0_10 = ["mqc_9_3_0_6"]  # Minimum MQ client version 9.3.0.10
mqc_9_3_0_11 = ["mqc_9_3_0_10"] # Minimum MQ client version 9.3.0.11
mqc_9_3_0_15 = ["mqc_9_3_0_11"] # Minimum MQ client version 9.3.0.15
mqc_9_3_0_16 = ["mqc_9_3_0_15"] # Minimum MQ client version 9.3.0.16
mqc_9_3_0_17 = ["mqc_9_3_0_16"] # Minimum MQ client version 9.3.0.17
mqc_9_3_0_20 = ["mqc_9_3_0_17"] # Minimum MQ client version 9.3.0.20
mqc_9_3_0_21 = ["mqc_9_3_0_20"] # Minimum MQ client version 9.3.0.21
mqc_9_3_0_25 = ["mqc_9_3_0_21"] # Minimum MQ client version 9.3.0.25
mqc_9_3_1_0 = ["mqc_9_3_0_25"]  # Minimum MQ client version 9.3.1.0
mqc_9_3_2_0 = ["mqc_9_3_1_0"]   # Minimum MQ client version 9.3.2.0
mqc_9_3_2_1 = ["mqc_9_3_2_0"]   # Minimum MQ client version 9.3.2.1
mqc_9_3_3_0 = ["mqc_9_3_2_1"]   # Minimum MQ client version 9.3.3.0
mqc_9_3_3_1 = ["mqc_9_3_3_0"]   # Minimum MQ client version 9.3.3.1
mqc_9_3_4_0 = ["mqc_9_3_3_1"]   # Minimum MQ client version 9.3.4.0
mqc_9_3_4_1 = ["mqc_9_3_4_0"]   # Minimum MQ client version 9.3.4.1
mqc_9_3_5_0 = ["mqc_9_3_4_1"]   # Minimum MQ client version 9.3.5.0
mqc_9_3_5_1 = ["mqc_9_3_5_0"]   # Minimum MQ client version 9.3.5.1
mqc_9_4_0_0 = ["mqc_9_3_5_1"]   # Minimum MQ client version 9.4.0.0
mqc_9_4_0_5 = ["mqc_9_4_0_0"]   # Minimum MQ client version 9.4.0.5
mqc_9_4_0_6 = ["mqc_9_4_0_5"]   # Minimum MQ client version 9.4.0.6
## Minimum MQ client version 9.4.1.0
mqc_9_4_1_0 = ["mqc_9_4_0_6"]

[dependencies]
dlopen2 = { version = "0.7.0", optional = true }
libc = { version = "0.2.155", optional = true }
document-features = "0.2"

[build-dependencies]
regex-lite = "0.1.6"
bindgen = { version = "0.70.1", optional = true }
cc = "1.1.18"

[package.metadata.docs.rs]
features = ["docsrs"]
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
